# neti

./: .gitignore  .slopchopignore  .warden_intent  AGENT-README.md  CHAT-PROTOCOL.md  Cargo.toml  Changelog.md  DESIGN.md  LICENCE-APACHE  README.md  ROADMAP  ROADMAP.md  SEMMAP.md  clippy_output.txt  context.txt  current-issues.md  friday-session-brief.md  messy.rs  mutants.toml  neti-report.txt  neti.toml  past-present-future.md  roadmap.md  roadmap_cleanup.md  roadmap_update.md  roadmap_update_tests.md  slopchop-report.txt  slopchop.toml  tasks.toml  v0.1.8-focus.md  verify_pivot.sh  warden.toml
.cargo/: mutants.toml
.warden_apply_backup/1764463009/: warden.toml
.warden_apply_backup/1764463132/: warden.toml
docs/: MUTATE_INTEGRATION.md  SCAN_V2_SPEC.md  branch-migration.md  case-study-gittrek.md  case-study-thubo.md  context-research.md  hash-investigation.md  issues-0001.md  issues.md  law-of-locality.md  locality-v2-proposal.md  musing-on-pot.md  mutant-freeze.md  mutation-daily.md  nim-spec.md  north-star.md  obs_test.txt  pack-pivot.md  past-present-future.md  personal-philosophy.md  scan-surfaces.md  software-topology-brief.md  stress-testing-1_3.md  swift-spec.md  utf8-panic.md  v1-brief.md
docs/ai-agent-resources/: agent-prompt.md  oath.md
docs/archived/: README.md  branch-migration.md  past-present-future.md  v1.3.0-consolidation.md
docs/issues/: issues-active.md  issues-backlog.md  issues-done.md
docs/research/: 3-13-26.md  big-pivot.research
docs/v1.3.5/: json-sample.md  past-present-future.md  v1.3.5-brief.md  v1.4.0-agent-sync-spec.md
mutants.out/: lock.json  mutants.json  outcomes.json
omni-ast/: Cargo.toml
omni-ast/src/: doc_extractor.rs  doc_filter.rs  harvester.rs  harvester_signatures.rs  harvester_tree.rs  lib.rs  semantics.rs  semantics_concurrency_queries.rs  semantics_engine.rs  semantics_logic_queries.rs  semantics_logic_tables.rs  semantics_queries.rs  semantics_tables.rs  taxonomy.rs  taxonomy_rules.rs  types.rs
omni-ast/src/language/: cpp.rs  cpp_includes.rs  go.rs  javascript.rs  mod.rs  python.rs  rust.rs
omni-ast/src/language/javascript/: monorepo.rs
omni-ast/src/swum/: mod.rs  splitter.rs  verb_patterns.rs
src/: analysis.rs  branch.rs  checks.rs  clipboard.rs  config.rs  constants.rs  detection.rs  discovery.rs  enumerate.rs  error.rs  events.rs  exit.rs  file_class.rs  filter.rs  heuristics.rs  lang.rs  lang_queries.rs  lib.rs  main.rs  map.rs  metrics.rs  project.rs  prompt.rs  reporting.rs  rules.rs  signatures.rs  skeleton.rs  smoke_test_dummy.rs  spinner.rs  tokens.rs  types.rs  utils.rs  wizard.rs
src/analysis/: aggregator.rs  ast.rs  checks.rs  cognitive.rs  engine.rs  extract.rs  extract_impl.rs  file_analysis.rs  inspector.rs  logic.rs  metrics.rs  mod.rs  sabotage.rs  safety.rs  scope.rs  structural.rs  visitor.rs  worker.rs
src/apply/: advisory.rs  backup.rs  blocks.rs  executor.rs  extractor.rs  git.rs  manifest.rs  messages.rs  mod.rs  parser.rs  patch.rs  types.rs  (+7 more)
tests/: check_json_test.rs  check_locality_test.rs  cli_exit.rs  cli_format.rs  cli_hooks.rs  cli_map.rs  cli_roadmap.rs  command_parsing_test.rs  integration_apply.rs  integration_audit.rs  integration_backup.rs  integration_core.rs  integration_pack.rs  integration_patch.rs  integration_roadmap.rs  integration_roadmap_uncheck.rs  integration_self_host.rs  integration_skeleton.rs  integration_stage.rs  integration_trace.rs  nim_grammar.rs  protection_roadmap.rs  repro_dry_run.rs  repro_roadmap_hardening.rs  roadmap_v2.rs  security_validation.rs  signatures_test.rs  smoke.sh  smoke_test.rs  unit_analysis.rs  unit_audit.rs  unit_config.rs  unit_diff.rs  unit_extractor.rs  unit_god_tier.rs  unit_graph.rs  unit_graph_build.rs  unit_manifest.rs  unit_pack.rs  unit_pack_violations.rs  (+9 more)
(+318 files in other folders)
