[package]
name = "slopchop"
version = "1.6.0"
edition = "2021"
authors = ["Spencer Nunamaker <junovhs@gmail.com>"]
description = "High-integrity code quality governance and transactional change management for AI-assisted development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/junovhs/slopchop"
homepage = "https://github.com/junovhs/slopchop"
documentation = "https://docs.rs/slopchop"
readme = "README.md"
keywords = ["code-quality", "linter", "ast", "developer-tools", "cli"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.82"
exclude = [
    "docs/archived/*",
    ".slopchop/*",
    "context.txt",
    "target/",
    ".git/",
]

[lib]
name = "slopchop_core"
path = "src/lib.rs"

[[bin]]
name = "slopchop"
path = "src/bin/slopchop.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
chrono = "0.4" # Added for report timestamps

# THE BRAINS - Tokenization
tiktoken-rs = "0.5"

# UI / TUI
crossterm = "0.28"

# Structural Parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"

[dev-dependencies]
tempfile = "3.10"

# Profile for release builds - optimize for size and speed
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profile for development - faster builds
[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
