[package]
name = "neti"
version = "1.6.6"
edition = "2021"
authors = ["Spencer Nunamaker <junovhs@gmail.com>"]
description = "High-integrity code quality governance and transactional change management for AI-assisted development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/junovhs/neti"
homepage = "https://github.com/junovhs/neti"
documentation = "https://docs.rs/neti"
readme = "README.md"
keywords = ["code-quality", "linter", "ast", "developer-tools", "cli"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.82"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**",
  "README.md",
  "LICENSE*",
]

[lib]
name = "neti_core"
path = "src/lib.rs"

[[bin]]
name = "neti"
path = "src/bin/neti.rs"

[dependencies]
anyhow = "1.0"
regex = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
chrono = "0.4"

# Tokenization
tiktoken-rs = "0.5"

# UI / TUI
crossterm = "0.28"

# Structural Parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
