[package]
name = "omni-ast"
version = "0.1.0"
edition = "2021"
description = "Shared semantic AST primitives extracted for cross-language code intelligence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/junovhs/neti"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tree-sitter = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3.10"
